--- a/backend/BrewInventory.App/appsettings.json
+++ b/backend/BrewInventory.App/appsettings.json
@@ -2,9 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Brewfather": {
+    "UserId": "",
+    "ApiKey": "",
+    "BaseUrl": "https://api.brewfather.app/v2/"
+  }
 }
